--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Começar com 100 reais pode até ser demais!</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Porque com apenas 10, 30 ou 50 reais, você já pode entrar no jogo e ver seu dinheiro crescer! Não importa o valor, o importante é usar a estratégia certa, e nós vamos te mostrar agora.</p>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Continue vendo 👇👇</a>
+                                    <a href="#" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Continue vendo 👇👇</a>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Só não entenderá quem não quer <b>investir</b>!</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Por exemplo, imagine que você compra ações de uma empresa que tem tudo para crescer, como uma loja de tecnologia. Se ela lança um produto de sucesso, o preço das ações sobe, e você lucra com isso <b>automaticamente</b>.</p>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Continue vendo 👇👇</a>
+                                    <a href="#" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Continue vendo 👇👇</a>
                                 </div>
                             </div>
                         </div>
@@ -224,6 +224,33 @@
         <!-- Facilities End -->
 
 
+
+        <!-- Testimonial Start -->
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h1 class="mb-3" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Veja o que nossos clientes têm a dizer sobre os resultados que alcançaram!</h1>
+                </div>
+                <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="testimonial-item bg-light rounded p-5">
+                        <img src="img/img-1.jpeg" style="object-fit: cover;" alt="">
+                    </div>
+                    <div class="testimonial-item bg-light rounded p-5">
+                        <img src="img/img-2.jpeg" style="object-fit: cover;" alt="">
+                    </div>
+                    <div class="testimonial-item bg-light rounded p-5">
+                        <img src="img/img-3.jpeg" style="object-fit: cover;" alt="">
+                    </div>
+                    <div class="testimonial-item bg-light rounded p-5">
+                        <img src="img/img-4.jpeg" style="object-fit: cover;" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Testimonial End -->
+
+
+
         
         <!-- About End -->
 
@@ -259,36 +286,6 @@
                 </div>
             </div>
         </div><br><br>
-
-
-
-
-
-         <!-- Testimonial Start -->
-         <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Veja o que nossos clientes têm a dizer sobre os resultados que alcançaram!</h1>
-                </div>
-                <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <img src="img/img-1.jpeg" style="object-fit: cover;" alt="">
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <img src="img/img-2.jpeg" style="object-fit: cover;" alt="">
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <img src="img/img-3.jpeg" style="object-fit: cover;" alt="">
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-5">
-                        <img src="img/img-4.jpeg" style="object-fit: cover;" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Testimonial End -->
-
-
 
 
 
