--- a/dowsell.html
+++ b/dowsell.html
@@ -123,10 +123,10 @@
     <p class="countdown" id="countdown">Oferta expira em: 00:15:00</p>
 
     <h1 style="font-size: 35px; color: red;">Essa é sua <b>ÚLTIMA CHANCE!</b></h1>
-    <p style="color: gray; text-align: center; font-size: 17px;">Como sabemos que este guia vai transformar a maneira como você investe, decidimos fazer algo especial para você!</p>
+    <p style="color: gray; text-align: center; font-size: 17px;">Nós sabemos o quanto este guia vai transformar a maneira como você investe, por isso decidimos fazer algo especial para você!</p>
     <hr>
     <br>
-    <p><strong>Vamos dar um desconto incrível para garantir que você tenha acesso a esse conhecimento essencial.</p>
+    <p><strong>Vamos dar um <b style="color: greenyellow;">DESCONTO</b> incrível para garantir que você tenha acesso a esse conhecimento essencial.</p>
       
 
 
