--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div id="container-esconder">
             <h1 style="background-color: red; padding: 10px; color: white;">Bolsa de valores</h1>
-            <h2 style="font-family:Arial, Helvetica, sans-serif;">Fature até 10K por mês na Bolsa de Valores com essa estratégia <b>Russa</b></h2>
+            <h2 style="font-family:Arial, Helvetica, sans-serif;">Aprenda e fature até 10K por mês na Bolsa de Valores com essa estratégia <b style="color: orange;">Russa</b></h2>
             <img src="img/img-5.jpg" class="img-quiz" alt="">
             <p>Mas antes vamos fazer algumas perguntas para garantir que você receba o guia e a estratégia perfeita para alcançar esses resultados!</p>
             
