--- a/thank.html
+++ b/thank.html
@@ -55,10 +55,8 @@
 <body>
   <div class="container">
     <h1>Obrigado pela sua Compra!👏🎉</h1><br>
-    <p>Parabéns! Você agora tem acesso exclusivo. Estamos muito felizes em tê-lo como parte do nosso grupo de investidores inteligentes.</p>
+    <p>Parabéns! Esperamos que você siga todos os passos e aproveite as estratégias compartilhadas para faturar mais de R$20.000 por mês. Sucesso na sua jornada!</p>
     <span style="font-size: 25px; text-align: start; color: #ff9800;">Opa, antes de ir!</span>
-    <p>Deixe aqui o seu depoimento para que outras pessoas conheçam como foi a sua experiência ao adquirir este guia. Seu feedback é muito importante para nós e pode ajudar outros investidores a tomarem a decisão certa!</p>
-    <a href="contact.html" class="btn">Enviar depoimento</a>
   </div>
 </body>
 </html>
