--- a/dowsell.html
+++ b/dowsell.html
@@ -123,14 +123,14 @@
     <p class="countdown" id="countdown">Oferta expira em: 00:15:00</p>
 
     <h1 style="font-size: 35px; color: red;">Essa é sua <b>ÚLTIMA CHANCE!</b></h1>
-    <p style="color: gray; text-align: center; font-size: 17px;">Nós sabemos o quanto este guia vai transformar a maneira como você investe, por isso decidimos fazer algo especial para você!</p>
+    <p style="color: gray; text-align: center; font-size: 17px;">Nós sabemos o quanto este guia vai te ajudar e garantir que você não precise passar pelos mesmos erros que outros já cometeram. Por isso, vamos fazer algo incrível para você!</p>
     <hr>
     <br>
-    <p><strong>Vamos dar um <b style="color: greenyellow;">DESCONTO</b> incrível para garantir que você tenha acesso a esse conhecimento essencial.</p>
+    <p><strong>Vamos dar um <b style="color: greenyellow;">DESCONTO</b> maravilhoso para garantir que você tenha acesso a esse conhecimento essencial.</p>
       
 
 
-       <!-- HOTMART - Sales Funnel Widget -->
+      <!-- HOTMART - Sales Funnel Widget -->
 <!--- sales funnel container --->
 <div id="hotmart-sales-funnel"></div>
 
@@ -147,9 +147,9 @@ checkoutElements.init('salesFunnel').mount('#hotmart-sales-funnel')
       <div class="bonus">
       <h3>O que você receberá:</h3>
       <ul>
-        <li>A Lista Negra dos Investimentos</li>
-        <li>Evitar Prejuízos Desnecessários</li>
-        <li>Acesso a Atualizações Exclusivas</li>
+        <li>Fontes de Ideias Infalíveis</li>
+        <li>Aceleração nos Resultados</li>
+        <li>Estratégias de Viralização Testadas</li>
         <li>E muito mais...</li>
       </ul>
       <p style="color: greenyellow;">Apôs a compra você ainda terá <b>7 dias</b> de garantia.</p>
