--- a/index.html
+++ b/index.html
@@ -68,15 +68,6 @@
         <!-- End Meta Pixel Code -->
 
 
-        <script type="text/javascript">
-            if (window.location.protocol !== "https:") {
-                window.location.href = "https://" + window.location.hostname + window.location.pathname + window.location.search;
-            }
-        </script>
-        
-         
-
-
 </head>
 
 <body>
@@ -100,21 +91,9 @@
         <!-- Navbar End -->
 
 
-        <!-- Carousel Start -->
-        <div class="container-fluid p-0 mb-5 nav-img-te">
-                <div class="owl-carousel-item position-relative">
-                    <img class="" src="img/imagem-web.jpg" style="object-fit: cover;">
-                    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .2);">
-                        <div class="container">
-                            <div class="row justify-content-start">
-                                <div class="col-10 col-lg-8">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </div>
-        <!-- Carousel End -->
+       <div class="container-img-index-top">
+        <img src="img/imagem-web.jpg">
+       </div>
 
 
         <!-- Facilities Start -->
@@ -153,7 +132,7 @@
 
 
         <div class="vsl">
-            <video src="img/video-page-web.mp4" poster="img/img-poster-vodep.jpg" allowfullscreen controls no-autoplay></video>
+            <video src="img/videoweb.mp4" poster="img/img-poster-vodep.jpg" allowfullscreen controls no-autoplay></video>
           </div><br>
 
 
