--- a/upsell.html
+++ b/upsell.html
@@ -10,8 +10,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #2a2a2a;
-      color: #fff;
+      background: #fff;
+      color: #2a2a2a;
     }
     .container {
       max-width: 900px;
@@ -122,20 +122,20 @@
   <div class="container">
 
     <h1>Parabéns pela sua compra!👏🎉</h1>
-    <p style="color: gray; text-align: center; font-size: 17px;"> Você está 🤏 da sua liberdade financeira. Com a Estratégia Russa, você vai se beneficiar de coisas que muitos nem imaginam!</p>
+    <p style="color: gray; text-align: center; font-size: 17px;"> Você descobrirá como criar vídeos virais usando inteligência artificial e conquistar resultados incríveis. Prepare-se para faturar R$20K ou mais por mês, com o guia que acabou de adquirir.</p>
     <hr><br>
     <br>
     <h2 style="color: red;">Assista o vídeo abaixo!!</h2>
     <div class="vsl">
-      <video src="img/videp-upsell.mp4" allowfullscreen controls no-autoplay></video>
+      <video src="img/video-upsell.mp4" allowfullscreen controls no-autoplay></video>
     </div>
     <br>
-    <p><strong>Oferta Exclusiva!! <br> Não perca a chance de proteger seu dinheiro e aumentar seus ganhos.</p>
+    <p><strong>Oferta Exclusiva!!</strong> <br> Não perca essa chance <br> de acelerar seu sucesso!</p>
       <p class="countdown" id="countdown">Oferta expira em: 00:15:00</p>
 
 
 
-      <!-- HOTMART - Sales Funnel Widget -->
+     <!-- HOTMART - Sales Funnel Widget -->
 <!--- sales funnel container --->
 <div id="hotmart-sales-funnel"></div>
 
@@ -147,17 +147,17 @@ checkoutElements.init('salesFunnel').mount('#hotmart-sales-funnel')
 <!-- HOTMART - Sales Funnel Widget -->
 
 
-
-      <div class="bonus">
-      <h3>O que você receberá:</h3>
-      <ul>
-        <li>A Lista Negra dos Investimentos</li>
-        <li>Evitar Prejuízos Desnecessários</li>
-        <li>Acesso a Atualizações Exclusivas</li>
-        <li>E muito mais...</li>
-      </ul>
-      <p style="color: greenyellow;">Apôs a compra você ainda terá <b>7 dias</b> de garantia.</p>
-    </div>
+<div class="bonus">
+  <h3>O que você receberá:</h3>
+  <ul>
+    <li>Fontes de Ideias Infalíveis</li>
+    <li>Aceleração nos Resultados</li>
+    <li>Estratégias de Viralização Testadas</li>
+    <li>E muito mais...</li>
+  </ul>
+  <p style="color: green;">Apôs a compra você ainda terá <b>7 dias</b> de garantia.</p>
+</div>
+</div>
 
   </div>
 
