--- a/dowsell.html
+++ b/dowsell.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upsell - A Lista Negra dos Investimentos</title>
+  <title>Última chance</title>
   <link href="img/logo-invest.png" rel="icon">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #2a2a2a;
-      color: #fff;
+      background: #fff;
+      color: #2a2a2a;
     }
     .container {
       max-width: 900px;
