--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bolsa de valores</title>
+    <title>R$ 20K/MÊS COM IA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -132,7 +132,7 @@
 
 
         <div class="vsl">
-            <video src="img/videoweb.mp4" poster="img/img-poster-vodep.jpg" allowfullscreen controls no-autoplay></video>
+            <video src="img/videoweb.mp4" controlslist="nodownload" poster="img/img-poster-vodep.jpg" allowfullscreen controls no-autoplay></video>
           </div><br>
 
 
