--- a/upsell.html
+++ b/upsell.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upsell - A Lista Negra dos Investimentos</title>
+  <title>Parabéns pela sua compra</title>
   <link href="img/logo-invest.png" rel="icon">
   <style>
     body {
@@ -127,7 +127,7 @@
     <br>
     <h2 style="color: red;">Assista o vídeo abaixo!!</h2>
     <div class="vsl">
-      <video src="img/video-upsell.mp4" allowfullscreen controls no-autoplay></video>
+      <video src="img/video-upsell.mp4" controlslist="nodownload" allowfullscreen controls no-autoplay></video>
     </div>
     <br>
     <p><strong>Oferta Exclusiva!!</strong> <br> Não perca essa chance <br> de acelerar seu sucesso!</p>
