--- a/dowsell.html
+++ b/dowsell.html
@@ -123,10 +123,10 @@
     <p class="countdown" id="countdown">Oferta expira em: 00:15:00</p>
 
     <h1 style="font-size: 35px; color: red;">Essa é sua <b>ÚLTIMA CHANCE!</b></h1>
-    <p style="color: gray; text-align: center; font-size: 17px;">Nós sabemos o quanto este guia vai te ajudar e garantir que você não precise passar pelos mesmos erros que outros já cometeram. Por isso, vamos fazer algo incrível para você!</p>
+    <p style="color: gray; text-align: center; font-size: 17px;">Nós sabemos o quanto este guia vai te ajudar e garantir que você não precise passar pelos mesmos erros que outros já passaram. Por isso, vamos fazer algo incrível para você!</p>
     <hr>
     <br>
-    <p><strong>Vamos dar um <b style="color: greenyellow;">DESCONTO</b> maravilhoso para garantir que você tenha acesso a esse conhecimento essencial.</p>
+    <p><strong>Vamos dar um <b style="color: green;">DESCONTO</b> maravilhoso para garantir que você tenha acesso a esse conhecimento essencial.</p>
       
 
 
@@ -152,7 +152,7 @@ checkoutElements.init('salesFunnel').mount('#hotmart-sales-funnel')
         <li>Estratégias de Viralização Testadas</li>
         <li>E muito mais...</li>
       </ul>
-      <p style="color: greenyellow;">Apôs a compra você ainda terá <b>7 dias</b> de garantia.</p>
+      <p style="color: green;">Apôs a compra você ainda terá <b>7 dias</b> de garantia.</p>
     </div>
   </div>
 
