--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div class="row g-4 align-items-center justify-content-center">
                     <div class="col-sm-6 container-price-index" style="background-color: #f1f1f1;">
-                        <span>O investimento para você aprender a faturar R$ 20K /mês com IA será de apenas:</span>
+                        <span>O investimento para você aprender a faturar R$ 20K /mês com vídeos IA será de apenas:</span>
                         <span><b style="text-decoration: line-through; color: gray;">R$ 300,00</b></span>
                         <span style="color: orange;">R$ 35,99</span>
                     </div>
